--- a/Galerie.html
+++ b/Galerie.html
@@ -35,31 +35,31 @@
         <section>
             <div class="container">
                 <div>
-                    <img src="galerie/pic1.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic2.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic3.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic11.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic5.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic6.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic7.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic1.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic2.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic3.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic11.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic5.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic6.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic7.jpeg" alt="Bild von Pinguin">
                 </div>
                 <div>
-                    <img src="galerie/pic8.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic9.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic10.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic4.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic12.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic13.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic14.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic8.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic9.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic10.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic4.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic12.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic13.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic14.jpeg" alt="Bild von Pinguin">
                 </div>
                 <div>
-                    <img src="galerie/pic15.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic16.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic17.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic18.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic19.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic20.jpeg" alt="Bild von Pinguin">
-                    <img src="galerie/pic21.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic15.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic16.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic17.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic18.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic19.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic20.jpeg" alt="Bild von Pinguin">
+                    <img src="/penguin-hub/galerie/pic21.jpeg" alt="Bild von Pinguin">
                 </div>
             </div>
         </section>
