--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <section>
                 <h2>Aktuelle Videos:</h2>
                 <div class="container">
-                    <div><video src="videos/vid1.mp4" controls></video></div>
-                    <div><video src="videos/vid2.mp4" controls></video></div>
-                    <div><video src="videos/vid3.mp4" controls></video></div>
-                    <div><video src="videos/vid4.mp4" controls></video></div>
-                    <div><video src="videos/vid5.mp4" controls></video></div>
-                    <div><video src="videos/vid6.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid1.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid2.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid3.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid4.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid6.mp4" controls></video></div>
+                    <div><video src="/penguin-hub/videos/vid7.mp4" controls></video></div>
                 </div>
             </section>
         </article>
